Estilo asignado a index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul id="lista">
                 <li><a href="carreras">OFERTA ACADÉMICA</a></li>
                 <li><a href="">QUIENES SOMOS</a></li>
                 <li><a href="#sedes">SEDES</a></li>
@@ -21,27 +21,28 @@
     </header>
     <main>
         <h1>Conoce nuestras carreras</h1>
-        <section id="carreras">
+        <hr id="linea">
+        <section class="contenedor-principal" id="carreras">
             <section class="contenedor-carreras">
                 <details>
                     <summary>
                         <h2 class="subtitulo-contenido">Energías Renovables</h2>
                     </summary>
-                    <p class="descripción-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="descripcion-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </details>
 
                 <details>
                     <summary>
                         <h2 class="subtitulo-contenido">Medio Ambiente</h2>
                     </summary>
-                    <p class="descripción-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="descripcion-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </details>
 
                 <details>
                     <summary>
                         <h2 class="subtitulo-contenido">Agricultura y Permacultura</h2>
                     </summary>
-                    <p class="descripción-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="descripcion-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </details>
             </section>
             <section class="contenedor-carreras">
@@ -49,36 +50,38 @@
                     <summary>                        
                         <h2 class="subtitulo-contenido">Construcción Sustentable</h2>
                     </summary>
-                    <p class="descripción-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="descripcion-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </details>
                 <details>
                     <summary>
                         <h2 class="subtitulo-contenido">Ecoturismo</h2>
                     </summary>
-                    <p class="descripción-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="descripcion-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </details>
 
                 <details>
                     <summary>
                         <h2 class="subtitulo-contenido">Manejo de Fauna Silvestre</h2>
                     </summary>
-                    <p class="descripción-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="descripcion-carreras">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </details>
             </section>
         </section>
 
-        <section id="sedes">
-            <h2 id="titulo-sedes">Conoce nuestras sedes</h2>
-            <div class="contenido-sedes">
-                <h2 class="subtitulo-sedes">Sede San Carlos</h2>
-                <img src="./images/localizacion.jpg" alt="">
-                <p class="parrafo-sedes">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-            <div class="contenido-sedes">
-                <h2 class="subtitulo-sedes">Sede Inestroza</h2>
-                <img src="./images/localizacion.jpg" alt="">
-                <p class="parrafo-sedes">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
+        <section class="contenedor-principal" id="sedes">
+            <h2 id="titulo-sedes">Nuestras sedes</h2>
+            <section id="posicion-sedes">
+                <div class="contenido-sedes">
+                    <h2 class="subtitulo-sedes">Sede San Carlos</h2>
+                    <img class="imagen-sedes" src="./images/localizacion.jpg" alt="">
+                    <p class="parrafo-sedes">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <div class="contenido-sedes">
+                    <h2 class="subtitulo-sedes">Sede Inestroza</h2>
+                    <img class="imagen-sedes" src="./images/localizacion.jpg" alt="">
+                    <p class="parrafo-sedes">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+            </section>
         </section>
     </main>
     <footer> 
