Keywords y description agregados

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="universidad, medio ambiente, ecología, educación, recursos, sostenibilidad">
+    <meta name="description" content="universidad medioambiental, educación medioambiental, carreras relacionadas con el medio ambiente">
     <link rel="stylesheet" href="style.css">
     <title>Universidad Técnica Medioambiental</title>
 </head>
