Etiqueta Google Analytics

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Universidad Técnica Medioambiental</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="universidad, medio ambiente, ecología, educación, recursos, sostenibilidad">
     <meta name="description" content="universidad medioambiental, educación medioambiental, carreras relacionadas con el medio ambiente">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8YVEH2W4JH"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8YVEH2W4JH');
+    </script>
+
+    <!-- Mi hoja de estilos personal -->
     <link rel="stylesheet" href="style.css">
-    <title>Universidad Técnica Medioambiental</title>
 </head>
 <body>
     <header>
